# ML_piplie_project

./: .gitignore  .pre-commit-config.yaml  Antifraud_project_EDA_and_ML_building.ipynb  README.md  pyproject.toml  test.ipynb  transactions.txt.dvc
.dvc/: config
